src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.dropdown-value {
  height: 30px;
  border: 1px solid #141414;
  border-radius: 3px;
  padding: 0 5px;
  display: flex;
  flex-flow: row wrap;
  align-content: center;
  justify-content: space-between;
}

.dropdown-menu {
  margin: 0;
  padding: 0;
  list-style: none;
  border: 1px solid black;
  background-color: #e4e4e4;
  position: absolute;
}
.dropdown-menu li {
  padding: 10px 5px;
}
.dropdown-menu li:hover {
  background-color: #000;
  color: white;
}

.dropdown-menu li:not(:last-child) {
  border-bottom: 1px solid gray;

}

.container {
  width: 50%;
}

